--- a/ReviewsFindMore01/Src/Screen8.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen8.fx.yaml
@@ -1,14 +1,14 @@
-Screen5 As screen:
+Screen8 As screen:
     BackgroundImage: ='rm222-mind-14'
     Fill: =RGBA(29, 29, 29, 1)
     ImagePosition: =ImagePosition.Fill
     LoadingSpinnerColor: =RGBA(3, 121, 137, 1)
 
-    "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
+    "Gallery1_1 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
         BorderColor: =RGBA(69, 186, 184, 1)
         DelayItemLoading: =true
         Height: =1048
-        Items: =Feedbacks
+        Items: =LookUp(Feedbacks,Email = User().Email)
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
@@ -16,7 +16,7 @@ Screen5 As screen:
         Y: =86
         ZIndex: =1
 
-        Title2 As label:
+        Title2_1 As label:
             Color: =RGBA(3, 121, 137, 1)
             DisabledColor: =RGBA(166, 166, 166, 1)
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -34,7 +34,7 @@ Screen5 As screen:
             Y: =23
             ZIndex: =1
 
-        Subtitle2 As label:
+        Subtitle2_2 As label:
             Color: =RGBA(3, 121, 137, 1)
             DisabledColor: =RGBA(166, 166, 166, 1)
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -47,12 +47,12 @@ Screen5 As screen:
             Size: =19
             Text: =ThisItem.DataCriado
             VerticalAlign: =VerticalAlign.Top
-            Width: =Title2.Width
+            Width: =Title2_1.Width
             X: =15
             Y: =59
             ZIndex: =2
 
-        NextArrow2 As icon.ChevronRight:
+        NextArrow2_1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
             BorderColor: =RGBA(69, 186, 184, 1)
             Color: =RGBA(29, 29, 29, 1)
@@ -62,7 +62,7 @@ Screen5 As screen:
             Icon: =Icon.ChevronRight
             OnSelect: |-
                 =Select(Parent);
-                If(ThisItem.Tipo = "Avaliação de Evento",Navigate(Screen7, ScreenTransition.None, {Id: Title2.Text}),Navigate(Screen6, ScreenTransition.None, {Id: Title2.Text}))
+                If(ThisItem.Tipo = "Avaliação de Evento",Navigate(Screen7, ScreenTransition.None, {Id: Title2_1.Text}),Navigate(Screen6, ScreenTransition.None, {Id: Title2_1.Text}))
             PaddingBottom: =16
             PaddingLeft: =16
             PaddingRight: =16
@@ -73,7 +73,7 @@ Screen5 As screen:
             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
             ZIndex: =3
 
-        Separator2 As rectangle:
+        Separator2_1 As rectangle:
             BorderColor: =RGBA(69, 186, 184, 1)
             Fill: =RGBA(255, 255, 255, 1)
             Height: =8
@@ -82,16 +82,16 @@ Screen5 As screen:
             Y: =Parent.TemplateHeight - Self.Height
             ZIndex: =4
 
-        Rectangle2 As rectangle:
+        Rectangle2_1 As rectangle:
             BorderColor: =RGBA(69, 186, 184, 1)
             Fill: =RGBA(69, 186, 184, 1)
-            Height: =Parent.TemplateHeight - Separator2.Height
+            Height: =Parent.TemplateHeight - Separator2_1.Height
             OnSelect: =Select(Parent)
             Visible: =ThisItem.IsSelected
             Width: =4
             ZIndex: =5
 
-        Subtitle2_1 As label:
+        Subtitle2_3 As label:
             Color: =RGBA(3, 121, 137, 1)
             DisabledColor: =RGBA(166, 166, 166, 1)
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -102,14 +102,30 @@ Screen5 As screen:
             PaddingRight: =0
             PaddingTop: =0
             Size: =19
-            Text: =ThisItem.Email
+            Text: =ThisItem.Assunto
             VerticalAlign: =VerticalAlign.Top
             Width: =366
             X: =18
             Y: =95
             ZIndex: =6
 
-    MenuLeftNav_2 As MenuLeftNav:
+        Button1 As button:
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledColor: =RGBA(166, 166, 166, 1)
+            DisabledFill: =RGBA(244, 244, 244, 1)
+            Fill: =RGBA(3, 121, 137, 1)
+            FontWeight: =FontWeight.Semibold
+            HoverColor: =RGBA(255, 255, 255, 1)
+            HoverFill: =ColorFade(RGBA(3, 121, 137, 1), -20%)
+            OnSelect: =Select(Parent)
+            Size: =24
+            Text: =""
+            Width: =193
+            X: =363
+            Y: =55
+            ZIndex: =7
+
+    MenuLeftNav_3 As MenuLeftNav:
         Height: =1049
         MenuColor: =RGBA(3, 121, 137, 1)
         MenuItems: |-
@@ -139,14 +155,14 @@ Screen5 As screen:
         Y: =86
         ZIndex: =2
 
-    NavBar_5 As rectangle:
+    NavBar_6 As rectangle:
         BorderColor: =RGBA(218, 241, 241, 1)
         Fill: =RGBA(3, 109, 123, 1)
         Height: =86
         Width: =640
         ZIndex: =3
 
-    Menu_1 As icon.Hamburger:
+    Menu_2 As icon.Hamburger:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(241, 244, 249, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
