--- a/ReviewsFindMore01/Src/Screen7.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen7.fx.yaml
@@ -231,6 +231,7 @@ Screen7 As screen:
             Navigate(Screen4, ScreenTransition.Fade)
         Size: =24
         Text: ="Submeter"
+        Visible: =If(ScreenAnterior = "Screen8",false,true)
         Width: =280
         X: =332
         Y: =1025
