--- a/ReviewsFindMore01/CanvasManifest.json
+++ b/ReviewsFindMore01/CanvasManifest.json
@@ -7,7 +7,7 @@
   },
   "Properties": {
     "AppCreationSource": "AppFromScratch",
-    "AppDescription": "teste",
+    "AppDescription": "teste1",
     "AppPreviewFlagsMap": {
       "aibuilderserviceenrollment": false,
       "allowmultiplescreensincanvaspages": false,
