--- a/ReviewsFindMore01/Src/Screen8.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen8.fx.yaml
@@ -8,7 +8,7 @@ Screen8 As screen:
         BorderColor: =RGBA(69, 186, 184, 1)
         DelayItemLoading: =true
         Height: =1048
-        Items: =Filter(Feedbacks, Email = User().Email)
+        Items: =Sort(Filter(Feedbacks, Email = User().Email),Id,SortOrder.Descending)
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
