--- a/ReviewsFindMore01/Src/Screen3.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen3.fx.yaml
@@ -47,7 +47,8 @@ Screen3 As screen:
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(3, 121, 137, 1), -20%)
         OnSelect: |-
-            =Patch(
+            =If(IsBlank(txt_PontoPositivo.Text) || IsBlank(txt_PontoNegativo.Text) || IsBlank(txt_outros.Text),Notify("Preencha Tudo",NotificationType.Information),
+            Patch(
                Feedbacks,
                First(Filter(Feedbacks, Text(Id) = Text(Max(Feedbacks, Id)))),
                { Avaliacao: Rating1.Value },
@@ -56,7 +57,7 @@ Screen3 As screen:
                { OutrosPontos: txt_outros.Text },
                { Email: User().Email}
             );
-            Navigate(Screen4, ScreenTransition.Fade)
+            Navigate(Screen4, ScreenTransition.Fade))
         Size: =24
         Text: ="Seguinte"
         Width: =280
