--- a/ReviewsFindMore01/Src/Screen6.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen6.fx.yaml
@@ -185,12 +185,13 @@ Screen6 As screen:
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(3, 121, 137, 1), -20%)
         OnSelect: |-
-            =Patch(
+            =If(IsBlank(Txt_mensagem_2.Text),Notify("Digite Uma Resposta"),
+            Patch(
                Feedbacks,
                LookUp(Feedbacks, Id = ID_FeedBacks),
                {Resposta: Txt_mensagem_2.Text}
             );
-            Navigate(Screen4, ScreenTransition.Fade)
+            Navigate(Screen4, ScreenTransition.Fade))
         Size: =24
         Text: ="Submeter"
         Visible: =If(ScreenAnterior = "Screen8",false,true)
